<resources>
    <string name="app_name">LapGrammer</string>
    <string name="lap_grammer">Lap Grammer</string>
    <string name="about">About</string>
    <string name="bar_title">List Laptop</string>
    <string name="author">Author</string>
    <string name="author_name">Nurkholiq Agani Hafid</string>
    <string name="email">caknurtopalanro77@gmail.com</string>
    <string name="passion">Android Developer</string>
    <string name="social_media">Media Sosial:</string>
    <string name="goal">\"We were born for a reason\"</string>
    <string name="list_laptop_programmer">LAPTOP PROGRAMMER</string>
    <string name="brand_laptop">Lenovo YOGA Slim 7i Carbon</string>
    <string name="price">Rp5.000.000</string>
    <string name="list_laptop_gaming">LAPTOP GAMING</string>
    <string name="laptop_rekomendasi_2022">LAPTOP REKOMENDASI 2022</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="title_desc_item">Asus Zenbook Pro Duo UX482EG i7 1165G7</string>
    <string name="rincian_produk">Rincian Produk</string>
    <string name="layar_desc">14” (16:9) LED-backlit FHD (1920 x 1080) 60 Hz touchscreen</string>
</resources>