<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24">

        <TextView
            style="@style/TitleBarLayoutFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/deskripsi" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/border_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardElevation="8dp">

                    <ImageView
                        android:id="@+id/img_item_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:src="@drawable/laptop_1" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title_desc_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/title_desc_item"
                    android:textColor="@color/grey_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_price_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/price"
                    android:textColor="@color/deep_orange_500"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="2dp"
                android:alpha="0.1"
                android:background="@color/blue_grey_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rincian_produk"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="@color/blue_grey_700" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Layar" />

                    <TextView
                        android:id="@+id/tv_sub_screen"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Prosesor" />

                    <TextView
                        android:id="@+id/tv_sub_prosesor"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Graphic Card" />

                    <TextView
                        android:id="@+id/tv_sub_graphic"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="RAM" />

                    <TextView
                        android:id="@+id/tv_sub_ram"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Storage" />

                    <TextView
                        android:id="@+id/tv_sub_storage"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Baterai" />

                    <TextView
                        android:id="@+id/tv_sub_battery"
                        style="@style/TextSpec.Value"
                        android:text="@string/layar_desc" />
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="@color/blue_grey_700" />

            <TextView
                android:id="@+id/tv_desc_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/layar_desc"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="@color/blue_grey_700" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/btn_shopee"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/deep_orange_500"
            android:text="Shopee"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_lazada"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/deep_orange_500"
            android:text="Lazada"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>